refactor(tests): Replace MockLanguageServer singletons with configurable, per-testcase LanguageServer instances